css/mainstyle.css
body {
    color: rgb(150, 96, 66);
}

section:not(#Greeting) {
    min-height: 100vh;
    padding-top: 2em;
    padding-bottom: 2em;
}

h1 {
    font-size: 5em;
    font-family: 'Times New Roman', Times, serif;
}

.navmain .container-fluid #navbarSupportedContent ul li a.active {
    background-color: rgb(150, 96, 66);
    border-radius: 30%;
}

.navbar-toggler {
    border: 2px solid black !important;
    border-radius: 10px !important;
}


.nav-item {
    margin-left: 1em;
    margin-right: 1em;
}

.nav-item path,
.navmain path {
    /* fill: rgb(225,207,197); */
    fill: rgb(150, 96, 66);
}

.bg-nav-link {
    background-color: rgb(244, 235, 230);
}

/* Banner / Carousel */
.carousel-item{
    aspect-ratio: 16/9;
}

.carousel-inner {
    height: 100vh;
}

.carousel-inner img {
    object-fit: cover;
}

.carousel-item:nth-child(1) img{
    object-position: bottom center;
}

.carousel-item:nth-child(2) img{
    object-position: center center;
}

/* Greeting Section */
#Greeting{
    background-color:rgb(244, 235, 230)
}

#Greeting .col-lg-4 {
    background-color: rgb(150, 96, 66);
    height: 100vh;
    padding-top: 2em;
    padding-bottom: 2em;
}

.greeting-img {
    /* position: absolute; */
    width: 100%;
    height: 100%;
}

#Greeting img {
    border-top-left-radius: 50% 30%;
    border-top-right-radius: 50% 30%;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.greeting-quote {
    height: fit-content;
}

/* Greeting Section */

/* Bio Section */

#Bio {
    background-image: url('../img/fb-image.jpg');
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
}

.bio-img-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 10px;
}

.bio-text {
    border-radius: 10px;
    padding: 1em 2em;
    background-color: rgba(255, 255, 255, 0.5);
    border: 1px solid white;
    max-height: max(50vh, 50vw);
    overflow-y: scroll;
    overflow-x: scroll;
}

.bio-text::-webkit-scrollbar{
    width: 5px;
    height: 5px;
}

.bio-text::-webkit-scrollbar-track {
    border-radius: 10px;
}

.bio-text::-webkit-scrollbar-thumb {
    border-radius: 10px;
    border-left: 2px solid rgba(0,0,0,0.5);
}

.bio-text::-webkit-scrollbar-corner{
    background-color: transparent;
}

/* Bio Section */

/* Info Section */
#Info {
    height: 100vh;
    background-color: rgb(244, 235, 230);
}

#Info h1,
#Info h3 {
    text-align: center;
}

#Info h1 {
    padding-top: 5%;
}

div[class*="info-img"] {
    height: 70%;
    width: 70%;
}

div[class*="info-text"] {
    position: absolute;
    top: 80%;
}

#Info .col-4 {
    position: relative;
    display: flex;
    justify-content: center;
}

#Info img {
    border-top-left-radius: 50% 50%;
    border-top-right-radius: 50% 50%;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

/* Info Section */

/* Media Queries */
/* XS */
@media (max-width: 575px) {
    
}

/* SM */
@media (min-width: 576px) and (max-width: 767px) {
    
}

/* MD */
@media (min-width: 768px) and (max-width: 991px) {
    
}

/* LG */
@media (min-width: 992px) and (max-width: 1199px) {
    
}

/* XL */
@media (min-width: 1200px) {
    
}

@media (max-width: 1199px) {
    .carousel-inner{
        height: fit-content;
    }
}

/* Touch */
@media (max-width: 767px) {
    .nav-social{
        flex-direction: row !important;
    }
}

